# aiomax

./: .gitignore  LICENSE  LICENSE.md  README.md  SUMMARY.md  buttons.md  pypi-description.md  pyproject.toml  setup.py
.github/workflows/: aur.yml  lint.yml  pypi.yml  wiki.yml
aiomax/: __init__.py  api.py  bot.py  buttons.py  cache.py  classes.py  exceptions.py  filters.py  fsm.py  msgconvert.py  router.py  types.py  utils.py
docs/: 01 bots.md  02 decorators.md  FSM.md  Home.md  README.md  bots.md  buttons.md  classes.md  decorators.md  examples.md  filters.md  fsm.md  logging.md  routers.md  types.md  Бот.md  Декораторы.md  Клавиатуры.md  Логи.md  Примеры.md  Роутеры.md  Типы.md  Фильтры.md
