[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aiomax"
version = "2.7.3"
dependencies = [
    "aiohttp"
]
dynamic = ["readme"]
requires-python = ">= 3.9"
authors = [
    {name = "mbutsk", email = "mbutsk@icloud.com"},
    {name = "moontr3", email = "contact@moontr3.ru"}
]
description = "Asynchronous framework for Max Bot API"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = [
    "bot",
    "api",
    "asyncio",
    "max"
]
classifiers = [
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/dpnspn/aiomax"
Docs = "https://github.com/dpnspn/aiomax/wiki"
"Source code" = "https://github.com/dpnspn/aiomax"

[tool.setuptools.dynamic]
readme = {file = ["pypi-description.md", "README.md"], content-type = "text/markdown"}
